@@ -18,6 +18,9 @@ version 2.6.0 (??/??/2009):
 	* Pressing the Enter key in the message entry box of the New Status
 	  dialog and various other dialogs now causes the cursor to move to
 	  the next line.
+	* Authentication failures now clear the account password, causing Pidgin
+	  to prompt for the password when clicking the "Re-enable" button on the
+	  minidialog.
 
 version 2.5.5 (03/01/2009):
 	libpurple:
